Add Query by Example feature #2418
Fixed Criteria.regexp
Minor fixes in QueryByExample fragments and mapper
Improved test coverage